--- a/mediathek.html
+++ b/mediathek.html
@@ -10,11 +10,12 @@
 <body data-ng-app="app">
 <h1>Mediathek</h1>
 <div data-ng-controller="DirController">
-<p>{{path}}</p>
-<div data-ng-repeat="dirElement in dirElements">
+<h2>{{path}}</h2>
+<div class="dir" data-ng-repeat="dirElement in dirElements">
 <a data-ng-show="dirElement.type=='d'" href="/mediathek{{path}}{{dirElement.name}}">{{dirElement.name}}</a>
 <a data-ng-show="dirElement.type=='f'" href="/mediathek/files{{path}}{{dirElement.name}}">{{dirElement.name}}</a>
 </div>
+<div class="pathError" data-ng-show="pathError">Pfad existiert nicht</div>
 </div>
 </body>
 </html>
