serve angular local

--- a/mediathek.html
+++ b/mediathek.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" media="screen" href="/resources/css/screen.css" />
-  <script type="text/javascript" src="https://code.angularjs.org/1.2.9/angular.min.js"></script>
-  <script type="text/javascript" src="https://code.angularjs.org/1.2.9/angular-resource.min.js"></script>
+  <script type="text/javascript" src="/resources/js/angular/angular.min.js"></script>
+  <script type="text/javascript" src="/resources/js/angular/angular-resource.min.js"></script>
   <script type="text/javascript" src="/resources/js/app.js"></script>
   <script type="text/javascript" src="/resources/js/Location.js"></script>
   <script type="text/javascript" src="/resources/js/DirController.js"></script>
